--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,6 +18,9 @@ jobs:
 
     steps:
 
+    - name: Set up environment variables
+      run: echo "SSH_PUBLIC_KEY=${{ secrets.SSH_PUBLIC_KEY }}" >> $GITHUB_ENV
+
     - name: Checkout
       uses: actions/checkout@v2
     - name: configure AWS credentials
