--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,11 +18,12 @@ jobs:
 
     steps:
 
-    - name: Set up environment variables
-      run: echo "SSH_PUBLIC_KEY=${{ secrets.SSH_PUBLIC_KEY }}" >> $GITHUB_ENV
-
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Set up SSH key
+      run: echo "SSH_PUBLIC_KEY=${{ secrets.DEPLOY_PUBLIC_KEY }}" >> $GITHUB_ENV
+
     - name: configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
