--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,8 +38,8 @@ jobs:
       run: terraform fmt -check
 
     - name: Terraform Plan
-      run: terraform plan
+      run: terraform plan -var="DEPLOY_PUBLIC_KEY=${{ env.SSH_PUBLIC_KEY }}"
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve
+      run: terraform apply -auto-approve -var="DEPLOY_PUBLIC_KEY=${{ env.SSH_PUBLIC_KEY }}"
