--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up SSH key
-      run: echo "SSH_PUBLIC_KEY=${{ secrets.DEPLOY_PUBLIC_KEY }}" >> $GITHUB_ENV
+      run: echo "SSH_PUBLIC_KEY=${{ secrets.DEPLOY_PUBLIC_KEY }}" | tee -a $GITHUB_ENV
 
     - name: configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
