--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # 追加: EC2へのPingテスト
+      - name: Ping Test to EC2
+        env:
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+        run: |
+          ping -c 4 $SERVER_IP
+
       - name: Deploy to EC2
         env:
           PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
