--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       # 追加: EC2へのPingテスト
-      - name: Ping Test to EC2
-        env:
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-        run: |
-          ping -c 4 $SERVER_IP
+      # - name: Ping Test to EC2
+      #   env:
+          # SERVER_IP: 
+      #   run: |
+      #     ping -c 4 $SERVER_IP
 
       - name: Deploy to EC2
         env:
