--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       #   env:
           # SERVER_IP: 
       #   run: |
-      #     ping -c 4 $SERVER_IP
+      #     ping -c 4 $SERVER_IP 1
 
       - name: Deploy to EC2
         env:
