--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,12 @@ jobs:
       
       - name: Install dependencies
         run: |
-          cd page/blog/blog-app
+          cd blog/blog-app
           npm install
       
       - name: Build the React app
         run: |
-          cd page/blog/blog-app
+          cd blog/blog-app
           npm run build
 
       - name: Deploy to EC2
