--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,25 +38,25 @@ jobs:
           cd alien/ask-alien
           npm run build
 
-      # - name: Install dependencies for sagemaker
-      #   run: |
-      #     cd sagemaker/my-sagemaker-app
-      #     npm install
-  
-      # - name: Build the sagemaker React app
-      #   run: |
-      #     cd sagemaker/my-sagemaker-app
-      #     npm run build
-
-      - name: Install dependencies for quantum
+      - name: Install dependencies for sagemaker
         run: |
-          cd quantum/my-quantum-music-app
+          cd sagemaker/my-sagemaker-app
           npm install
   
-      - name: Build the quantum React app
+      - name: Build the sagemaker React app
         run: |
-          cd quantum/my-quantum-music-app
+          cd sagemaker/my-sagemaker-app
           npm run build
+
+      # - name: Install dependencies for quantum
+      #   run: |
+      #     cd quantum/my-quantum-music-app
+      #     npm install
+  
+      # - name: Build the quantum React app
+      #   run: |
+      #     cd quantum/my-quantum-music-app
+      #     npm run build
 
       - name: Install dependencies for Alien-Server
         run: |
@@ -93,11 +93,11 @@ jobs:
           rsync -avz -e "ssh -i deploy_key -o ServerAliveInterval=60 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o GSSAPIAuthentication=no" /home/runner/work/page/page/alien-server/ ec2-user@$SERVER_IP:/usr/share/nginx/html/alien-server/
 
           # Deploy the built sagemaker React app
-          # rsync -avz -e "ssh -i deploy_key -o ServerAliveInterval=60 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o GSSAPIAuthentication=no" /home/runner/work/page/page/sagemaker/my-sagemaker-app/build/ ec2-user@$SERVER_IP:/usr/share/nginx/html/sagemaker/
+          rsync -avz -e "ssh -i deploy_key -o ServerAliveInterval=60 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o GSSAPIAuthentication=no" /home/runner/work/page/page/sagemaker/my-sagemaker-app/build/ ec2-user@$SERVER_IP:/usr/share/nginx/html/sagemaker/
           # rsync -avz -e "ssh -i deploy_key -o ServerAliveInterval=60 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o GSSAPIAuthentication=no" /home/runner/work/page/page/sagemaker-server/ ec2-user@$SERVER_IP:/usr/share/nginx/html/sagemaker-server/
 
           # Deploy the built quantum React app
-          rsync -avz -e "ssh -i deploy_key -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o GSSAPIAuthentication=no" /home/runner/work/page/page/quantum/my-quantum-music-app/build/ ec2-user@$SERVER_IP:/usr/share/nginx/html/quantum/
+          # rsync -avz -e "ssh -i deploy_key -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o GSSAPIAuthentication=no" /home/runner/work/page/page/quantum/my-quantum-music-app/build/ ec2-user@$SERVER_IP:/usr/share/nginx/html/quantum/
 
           ssh -i deploy_key -o ServerAliveInterval=60 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o GSSAPIAuthentication=no ec2-user@$SERVER_IP 'sudo systemctl restart nginx'
           rm -f deploy_key
