--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Build the natural app
         run: |
-          cd natural
+          cd natural/myapp
           npm install
           npm run build
     
